--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           ENVVAR: yepyep
         run: |
-          export IMAGE="$ENVVAR"
+          export IMAGE="$ENVVARandsomething"
           echo $IMAGE
           echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
   job2:
